Fix paging module stretched option class

--- a/less/paging.less
+++ b/less/paging.less
@@ -159,7 +159,7 @@
 		}
 	}
 
-	&.align-pager {
+	&.pg-stretch {
 		display: block;
 		width: 100%;
 
